Updated heading level one

--- a/demo.htm
+++ b/demo.htm
@@ -28,7 +28,7 @@ I am looking for <mark> single shift</mark> projects<sup>java </sup> . <del>Help
 <br>
 
 <table>
-<caption> EDUCATIONAL DETAILS</caption>
+<caption> EDUCATIONAL History</caption>
 <colgroup>
     <col span="1" style="background-color:white">
     <col style="background-color:white">
