Google fonts and image float

--- a/demo.htm
+++ b/demo.htm
@@ -2,20 +2,24 @@
 <html>
   <head>
 	<title>Web Dev-01</title>
+	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<a href="Register.html" target="_">Register</a>
+	
 <style>
 
-thead {color:green;}
-tbody {color:blue;}
-tfoot {color:red;}
+ thead {color:green;}
+ tbody {color:blue;}
+ tfoot {color:red;}
 
-table, th, td {
+ table, th, td {
   border: 1px solid black;
 			}
 </style>
+
   </head>
- <body>
+ 
+  <body>
 <hr>
   <h1> Learning Phase 1 </h1>
 <p><tt> 
@@ -69,6 +73,7 @@ I am looking for <mark> single shift</mark> projects<sup>java </sup> . <del>Help
 
 <h2 class="heading image" >Image in HTML </h2>
 <img src="tiger.jpg" alt="Tiger" width="200"height="200"> 
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium at similique quia itaque maxime nam omnis error velit? Neque reiciendis quae repellat laborum vel ea dolor sed harum error expedita!</p>
+<footer>End of page</footer>
  </body>
 </html>
