--- a/demo.htm
+++ b/demo.htm
@@ -23,12 +23,14 @@
 <hr>
   <h1> Learning Phase 1 </h1>
 <p><tt> 
-I am looking for <mark> single shift</mark> projects<sup>java </sup> . <del>Help me </del> 
+I am looking for <mark> single shift</mark> projects<sup><span>java </span></sup> . <del>Help me </del> 
 <ins>God helps those , who helps themselves.</ins>
 <br>
+<br>
 
-<a href="https://www.javatpoint.com/html-tags" target="_">Click this </a> 
+<a class="extra" href="https://www.javatpoint.com/html-tags" target="_">Learn More about HTML </a> 
 
+<br>
 <br>
 
 <table>
