--- a/Grid Project/index.html
+++ b/Grid Project/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
-     <nav class="zone green">
+     <nav class="zone green sticky">
        <ul class="main-nav">
           <li><a href="">About</a></li> 
           <li><a href="">Products</a></li> 
@@ -14,11 +14,17 @@
         </ul>
      </nav>
 
-
-
-     
-      <div class="zone red">Cover</div>
-      <div class="zone blue">Project Grid</div>
-      <div class="zone yellow">Footer</div>
+      <div class="container zone red">Cover(';')</div>
+      <div class="zone blue grid-wrapper">
+        <div class="box zone"> <img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+        <div class="box zone"><img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+        <div class="box zone"><img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+        <div class="box zone"><img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+        <div class="box zone"><img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+        <div class="box zone"><img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+        <div class="box zone"><img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"></div>
+      </div>
+      
+      <footer class="zone yellow">  The end !</Footer>
   </body> 
 </html>
